ロケットハッシュを修正

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -32,12 +32,11 @@
 
       .footer
         .chat-main__form
-          / %form{:action => "", :method => ""}
-          %input{:type =>"text", :value => "type a message", :size => "50" }
+          %input{type: "text", value: "type a message", size: "50"}
             %label.upload-label{for: "upload-icon"}
               %i.fa.fa-picture-o
         .chat-main__form-btn
-          %input{:class =>"btn", :type =>"submit", :size => "15",:value => "SEND" }
+          %input{class: "btn",type: "submit",size: "15",value: "SEND"}
 
 
 
