--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,18 +1,22 @@
 .header
   .notification
-    .chat-side
-      .chat-side__user
-        .chat-side__user-content
-          .chat-side__user-name tanakanaoki
-          .chat-side__user-detail
-            %a.chat-side__user--new-groups
-            =fa_icon "edit"
-            %a.chat-side__user--edit-user
-            =fa_icon "cog"
-      .chat-side__groups
-        .chat-side__groups-lists
-          .chat-side__groups-name techA
-          .chat-side__groups-message 初めまして
+    .side-bar
+      .header
+        .header__name
+          = current_user.name
+        %ul.header__lists
+          %li.list
+            =fa_icon "edit", class: "icon"
+          %li.list
+            = link_to edit_user_path(current_user) do
+              =fa_icon "cog", class: "icon2"
+      .groups
+        .group
+          .group__name techA
+          .group__message 初めまして
+        .group
+          .group__name techB
+          .group__message こんばんは
 
     .chat-main
       .chat-main__header
@@ -41,3 +45,21 @@
 
 
 
+/ .chat-side
+/       .chat-side__user
+/         .chat-side__user-content
+/           .chat-side__user-name tanakanaoki
+/           .chat-side__user-detail
+/             %a.chat-side__user--new-groups
+/             =fa_icon "edit"
+/             %a.chat-side__user--edit-user
+/             =fa_icon "cog"
+/       .chat-side__groups
+/         .chat-side__groups-lists
+/           .chat-side__groups-name techA
+/           .chat-side__groups-message 初めまして
+
+/ .chat-side__groups
+/         .chat-side__groups-lists
+/           .chat-side__groups-name techA
+/           .chat-side__groups-message 初めまして
