--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,23 +1,6 @@
 .header
   .notification
-    .side-bar
-      .header
-        .header__name
-          = current_user.name
-        %ul.header__lists
-          %li.list
-            =fa_icon "edit", class: "icon"
-          %li.list
-            = link_to edit_user_path(current_user) do
-              =fa_icon "cog", class: "icon2"
-      .groups
-        .group
-          .group__name techA
-          .group__message 初めまして
-        .group
-          .group__name techB
-          .group__message こんばんは
-
+    = render :partial => "devise/shared/side_bar"
     .chat-main
       .chat-main__header
         .chat-main__header-clear-fixed
@@ -25,7 +8,9 @@
             %li.chat-main__header--group-name techA
             %li.chat-main__header--group-members MEMBER: a
             %li
-              %a.chat-main__header--group-edit-btn(href="")edit
+              %a.chat-main__header--group-edit-btn
+                =link_to "edit","#",method: :get
+
 
       .chat-main__groups
         .chat-main__groups-content
@@ -45,6 +30,19 @@
 
 
 
+/ .header
+/   .notification
+/     .side-bar
+/       .header
+/         .header__name
+/           = current_user.name
+/         %ul.header__lists
+/           %li.list
+/             =link_to new_group_path do
+/               =fa_icon "edit", class: "icon"
+/           %li.list
+/             = link_to edit_user_path(current_user) do
+/               =fa_icon "cog", class: "icon2"
 / .chat-side
 /       .chat-side__user
 /         .chat-side__user-content
