--- a/app/views/devise/shared/_side_bar.html.haml
+++ b/app/views/devise/shared/_side_bar.html.haml
@@ -10,10 +10,10 @@
         = link_to edit_user_path(current_user) do
           =fa_icon "cog", class: "icon2"
   .groups
-    - current_user.groups.each do |group|
-      .group
+    .group2
+      - current_user.groups.each do |group|
         = link_to group_messages_path(group) do
-          .group__name
+          .group2__name
             =group.name
-          .group__message
-            メッセージはまだありません。
+          .group2__message
+            = group.show_last_message
