--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -69,3 +69,18 @@
 }
 
 }
+
+.new_message{
+ margin: 20px 40px 20px 40px;
+}
+.form__mask__image {
+  float: right;
+  position: relative;
+  right: 80px;
+  bottom: 40px;
+}
+.hidden {
+  display: none;
+}
+
+
